--- a/software/DoorLedStrip/platformio.ini
+++ b/software/DoorLedStrip/platformio.ini
@@ -9,7 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
-platform = espressif32
+#platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32.git#53.03.13
+#53.03.13 is last on Arduino core 3.1.3, needed for https://github.com/HomeSpan/HomeSpan/issues/1048
 board = nodemcu-32s
 framework = arduino
 upload_speed = 1500000
@@ -18,6 +20,9 @@ build_flags =
 	-D WIFI_SSID=\"${sysenv.WIFI_SSID}\"
 	-D WIFI_PASS=\"${sysenv.WIFI_PASS}\"
 lib_deps = 
-	makuna/NeoPixelBus@^2.8.3
+	#makuna/NeoPixelBus@^2.8.3
+	#https://github.com/Makuna/NeoPixelBus.git#CORE3
 	claws/BH1750@^1.3.0
 	adafruit/Adafruit INA219@^1.2.3
+	homespan/HomeSpan@^2.1.1
+board_build.partitions = max_app_4MB.csv
