reorg and split code

--- a/software/DoorLedStrip/platformio.ini
+++ b/software/DoorLedStrip/platformio.ini
@@ -16,9 +16,6 @@ board = nodemcu-32s
 framework = arduino
 upload_speed = 1500000
 monitor_speed = 115200
-build_flags = 
-	-D WIFI_SSID=\"${sysenv.WIFI_SSID}\"
-	-D WIFI_PASS=\"${sysenv.WIFI_PASS}\"
 lib_deps = 
 	#makuna/NeoPixelBus@^2.8.3
 	#https://github.com/Makuna/NeoPixelBus.git#CORE3
@@ -26,3 +23,6 @@ lib_deps =
 	adafruit/Adafruit INA219@^1.2.3
 	homespan/HomeSpan@^2.1.1
 board_build.partitions = max_app_4MB.csv
+monitor_rts = 0
+monitor_dtr = 0
+monitor_echo = yes
