--- a/software/DoorLedStrip/platformio.ini
+++ b/software/DoorLedStrip/platformio.ini
@@ -9,20 +9,21 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
-#platform = espressif32
 platform = https://github.com/pioarduino/platform-espressif32.git#53.03.13
-#53.03.13 is last on Arduino core 3.1.3, needed for https://github.com/HomeSpan/HomeSpan/issues/1048
 board = nodemcu-32s
 framework = arduino
 upload_speed = 1500000
 monitor_speed = 115200
 lib_deps = 
-	#makuna/NeoPixelBus@^2.8.3
-	#https://github.com/Makuna/NeoPixelBus.git#CORE3
 	claws/BH1750@^1.3.0
 	adafruit/Adafruit INA219@^1.2.3
 	homespan/HomeSpan@^2.1.1
-board_build.partitions = max_app_4MB.csv
-monitor_rts = 0
-monitor_dtr = 0
+	esp32async/ESPAsyncWebServer@^3.7.7
+	esp32async/AsyncTCP@^3.4.0
+	bblanchon/ArduinoJson@^7.4.1
+board_build.partitions = partitions.csv
+board_build.flash_mode = dio
+board_build.flash_size = 4MB
+board_build.flash_freq = 80m
 monitor_echo = yes
+board_build.filesystem = littlefs
