--- a/software/DoorLedStrip/platformio.ini
+++ b/software/DoorLedStrip/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	esp32async/ESPAsyncWebServer@^3.7.7
 	esp32async/AsyncTCP@^3.4.0
 	bblanchon/ArduinoJson@^7.4.1
+	hmueller01/PubSubClient3@^3.1.0
 board_build.partitions = partitions.csv
 board_build.flash_mode = dio
 board_build.flash_size = 4MB
